# GesFer.Product.Front

./: .gitignore  AGENTS.md  AGENTS.norms.md  CONSTITUTION.md  EVOLUTION_LOG.md  Objetivos.md  README.md  test_script.js
.cursor/rules/: Validate_PR  action-suggestions.mdc  auditoria-interacciones.mdc  commands-via-skills-tools.mdc  eficiencia-operativa-tokens.mdc  features-documentation-frontmatter.mdc  process-suggestions.mdc  sddia-evolution-sync.mdc  sddia-ssot.mdc  skill-suggestions.mdc  subir-push.mdc
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/workflows/: Jules_Norms.yml  pr-validation.yml
SddIA/: CONSTITUTION.md  constitution.json
SddIA/actions/: README.md  actions-contract.md
SddIA/agents/: cumulo.json  cumulo.paths.json  tekton-developer.json
SddIA/evolution/: Evolution_log.md
SddIA/norms/: commands-via-skills-or-tools.md  entidades-dominio-ecosistema-sddia.md  features-documentation-frontmatter.md  git-via-skills-or-process.md  interaction-triggers.json  interaction-triggers.md  paths-via-cumulo.md  pr-acceptance-protocol.md  reproducir-create-skill-en-otros-entornos-sddia.md  sddia-evolution-sync.md  touchpoints-ia.md
SddIA/process/: README.md  analisis-restructuracion-patron-skills-tools.md  process-contract.json
SddIA/skills/: README.md  reproducir-skills-en-otros-entornos-sddia.md
SddIA/templates/: templates-contract.json
docs/: EVOLUTION_LOG.md
docs/TASKS/: bug_log_SddIA.md
docs/architecture/: I18N-GUIDE.md  I18N-STATUS.md  README-CONFIG.md  i18n-guide.md  i18n-status.md
docs/audits/: AUDITORIA_2026_04_22_01.md  AUDITORIA_2026_04_23_01.md  AUDITORIA_2026_04_24_01.md  AUDITORIA_2026_04_25_01.md  AUDITORIA_2026_04_26_01.md  AUDITORIA_2026_04_27_01.md  AUDITORIA_2026_04_28_01.md  AUDITORIA_2026_04_29_01.md  AUDITORIA_2026_04_30_01.md  AUDITORIA_2026_05_01_01.md  AUDITORIA_2026_05_02_01.md  AUDITORIA_2026_05_04_01.md  AUDITORIA_2026_05_06_01.md  AUDITORIA_2026_05_09_01.md  AUDITORIA_2026_05_10_01.md  AUDITORIA_2026_05_11_01.md  AUDITORIA_2026_05_12_01.md  AUDITORIA_2026_05_13_01.md  AUDITORIA_2026_05_14_01.md  AUDITORIA_2026_05_16_01.md  AUDITORIA_2026_05_17_01.md  AUDITORIA_2026_05_18_01.md  AUDITORIA_2026_12_08_01.md
docs/evolution/: EVOLUTION_LOG.md
docs/testing/: README-BEST-PRACTICES.md  README-TESTS-PLAYWRIGHT.md  README-TESTS.md  README.md  testing-guide.md
scripts/: README-E2E.md  Run-E2ELocal.ps1  audit_frontend_daily.py  cerrar-procesos-servicios.ps1  ejecutar-tests.ps1  install-front-dependencies.ps1  run-service-with-log.ps1  validate-nomenclatura.ps1  validate-services-and-health.ps1
scripts/Propuesta/: 01-Propuesta-Uso-Rapido-Clientes-Con-Mock.md  02-Propuesta-Uso-Rapido-API-Como-Cliente-Sin-Frontend.md  README.md  (+1 more)
scripts/skills-rs/: Cargo.toml  README.md  install.ps1
scripts/skills-rs/src/: capsule_v2.rs  lib.rs
scripts/tools-rs/: Cargo.toml  README.md  install.ps1
scripts/tools-rs/sddia-skills/: Cargo.toml
scripts/tools-rs/sddia-skills/src/: main.rs
scripts/tools-rs/src/: lib.rs
src/: .env.example  .playwright.env.example  COMANDOS-GIT.md  CONFIGURACION-API.md  Dockerfile  INSTRUCCIONES.md  README-TESTS.md  README.md  SETUP.md  SOLUCION-CORS.md  SOLUCION-PROBLEMAS.md  auth.ts  config.json  diagnostico.ps1  hacer-commit.ps1  i18n.ts  instalar-nodejs.ps1  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.api-only.config.ts  playwright.config.ts  reiniciar-servidor.ps1  setup-completo.ps1  setup.ps1  tailwind.config.ts  temp-e2e-output.txt  tsconfig.json  verificar-servidor.ps1
(+848 files in other folders)
