[package]
name = "gesfer-skills"
version = "0.1.0"
edition = "2021"
description = "Skills GesFer (contrato skills): implementación por defecto en Rust"
authors = ["GesFer"]
license = "UNLICENSED"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
notify = "6"

[[bin]]
name = "iniciar_rama"
path = "src/bin/iniciar_rama.rs"

[[bin]]
name = "merge_to_master_cleanup"
path = "src/bin/merge_to_master_cleanup.rs"

[[bin]]
name = "invoke_command"
path = "src/bin/invoke_command.rs"

[[bin]]
name = "verify_pr_protocol"
path = "src/bin/verify_pr_protocol.rs"

[[bin]]
name = "push_and_create_pr"
path = "src/bin/push_and_create_pr.rs"

[[bin]]
name = "invoke_commit"
path = "src/bin/invoke_commit.rs"

[[bin]]
name = "sddia_evolution_register"
path = "src/bin/sddia_evolution_register.rs"

[[bin]]
name = "sddia_evolution_validate"
path = "src/bin/sddia_evolution_validate.rs"

[[bin]]
name = "sddia_evolution_watch"
path = "src/bin/sddia_evolution_watch.rs"

[[bin]]
name = "git_workspace_recon"
path = "src/bin/git_workspace_recon.rs"

[[bin]]
name = "git_branch_manager"
path = "src/bin/git_branch_manager.rs"

[[bin]]
name = "git_save_snapshot"
path = "src/bin/git_save_snapshot.rs"

[[bin]]
name = "git_sync_remote"
path = "src/bin/git_sync_remote.rs"

[[bin]]
name = "git_tactical_retreat"
path = "src/bin/git_tactical_retreat.rs"

[[bin]]
name = "git_create_pr"
path = "src/bin/git_create_pr.rs"
